# hpkg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  bootstrap.sh  build.sh  clean.sh  download_deps.sh  prepare_deps.sh
cmake/: hpkg.pc.in  hpkgConfig.cmake.in  hpkg_deps.cmake  hpkg_utils.cmake
etc/: settings.yml
src/hpkg/: config.h.in  hpkg.h
src/hpkg/base/: macro.h  version.c  version.h
src/hpkg/cli/: cli_handle.c  cli_handle.h
src/hpkg/cli/base/: macro.h  version.c  version.h
src/hpkg/cli/command/: build.c  build.h
src/hpkg/cli/component/: settings.c  settings.h
src/hpkg/cli/utils/: path.c  path.h
src/hpkg/cliexe/: main.c
src/hpkg/component/: hpkg_cli_handle.c  hpkg_cli_handle.h  settings.c  settings.h
src/hpkg/object/: hash_func.c  hash_func.h  macro.h  predefine.h
src/hpkg/object/objects/: int_object.c  int_object.h  object.c  object.h  type.h
src/hpkg_cli/: main.c
tests/test_utils_path/: test_units_path.c
